--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <!-- HTMX -->
     <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="output.css">
 
     <title>Meus funcionários</title>
 </head>
 <body>
-    <h1>funcionários</h1>
+    <h1 class="text-4xl font-bold">funcionários</h1>
     <button hx-get="/test">clicar</button>
 </body>
 </html>
