--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,55 @@
 
     <title>Meus funcionários</title>
 </head>
-<body>
-    <h1 class="text-4xl font-bold">funcionários</h1>
-    <button hx-get="/test">clicar</button>
+<body class="bg-zinc-900">
+
+    <div class="w-full mx-auto px-2 max-w-7xl">
+        <h1 class="text-4xl font-bold text-white text-center mt-14 mb-4">Funcionários</h1>
+
+        <form 
+            class="bg-slate-100 w-full max-w-3xl mx-auto p-4 rounded flex flex-col justify-center items-center gap-4"
+        >
+            <div class="w-full">
+                <label class="font-bold text-lg">Nome completo</label>
+                <input 
+                    type="text"
+                    name="nome"
+                    placeholder="Digite o nome completo..."
+                    class="w-full p-2 rounded bg-white my-1"
+                />
+            </div>  
+            <div class="w-full">
+                <label class="font-bold text-lg">Email</label>
+                <input 
+                    type="email"
+                    name="nome"
+                    placeholder="Digite o email..."
+                    class="w-full p-2 rounded bg-white my-1"
+                />
+            </div>  
+            <div class="w-full">
+                <label class="font-bold text-lg">Cargo</label>
+                <select
+                    name="cargo"
+                    id="cargo"
+                    class="w-full p-2 rounded bg-white my-1"
+                >
+                    <option value="frontend">Frontend</option>
+                    <option value="backend">Backend</option>
+                    <option value="mobile">Mobile</option>
+                    <option value="fullstack">Fullstack</option>
+                    <option value="datascience">Data Science</option>
+                </select>
+            </div>
+            <div class="w-full">
+                <label class="font-bold text-lg mr-2">Status</label>
+                <input type="checkbox" name="status">
+            </div>
+
+            <button class="bg-blue-500 w-full rounded p-2 font-medium text-white">Salvar</button>
+
+        </form>
+    </div>
+
 </body>
 </html>
