--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,15 @@
 <body class="bg-zinc-900">
 
     <div class="w-full mx-auto px-2 max-w-7xl">
+        <div id="toast"></div>
         <h1 class="text-4xl font-bold text-white text-center mt-14 mb-4">Funcionários</h1>
 
         <form 
+            method="post"
+            id="form-funcionarios"
             class="bg-slate-100 w-full max-w-3xl mx-auto p-4 rounded flex flex-col justify-center items-center gap-4"
+            hx-post="/colaboradores"
+            hx-target="#toast"
         >
             <div class="w-full">
                 <label class="font-bold text-lg">Nome completo</label>
@@ -32,7 +37,7 @@
                 <label class="font-bold text-lg">Email</label>
                 <input 
                     type="email"
-                    name="nome"
+                    name="email"
                     placeholder="Digite o email..."
                     class="w-full p-2 rounded bg-white my-1"
                 />
@@ -56,7 +61,9 @@
                 <input type="checkbox" name="status">
             </div>
 
-            <button class="bg-blue-500 w-full rounded p-2 font-medium text-white">Salvar</button>
+            <button 
+                type="submit"
+                class="bg-blue-500 w-full rounded p-2 font-medium text-white">Salvar</button>
 
         </form>
     </div>
