feat: listagem de funcionarios

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,9 @@
                 class="bg-blue-500 w-full rounded p-2 font-medium text-white">Salvar</button>
 
         </form>
+        <div class="w-full max-w-3xl mx-auto mt-6">
+            <div id="lista-clientes" hx-get="/colaboradores" hx-trigger="load"></div>
+        </div>
     </div>
 
 </body>
