--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 
         </form>
         <div class="w-full max-w-3xl mx-auto mt-6">
-            <div id="lista-clientes" hx-get="/colaboradores" hx-trigger="load"></div>
+            <div id="lista-funcionarios" hx-get="/colaboradores" hx-trigger="load"></div>
         </div>
     </div>
 
