--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,71 @@
                 class="bg-blue-500 w-full rounded p-2 font-medium text-white">Salvar</button>
 
         </form>
+
+        <!-- formulario para edição -->
+        <form 
+            id="form-edit-funcionarios"
+            class="bg-slate-100 w-full max-w-3xl mx-auto p-4 rounded hidden flex-col justify-center items-center gap-4"
+            
+            >
+
+            <input type="hidden" name="id" id="id-funcionario"/>
+
+            <div class="w-full">
+                <label class="font-bold text-lg">Nome completo</label>
+                <input 
+                    type="text"
+                    name="nome"
+                    placeholder="Digite o nome completo..."
+                    class="w-full p-2 rounded bg-white my-1"
+                    id="edit-nome"
+                />
+            </div>  
+            <div class="w-full">
+                <label class="font-bold text-lg">Email</label>
+                <input 
+                    type="email"
+                    name="email"
+                    placeholder="Digite o email..."
+                    class="w-full p-2 rounded bg-white my-1"
+                    id="edit-email"
+                />
+            </div>  
+            <div class="w-full">
+                <label class="font-bold text-lg">Cargo</label>
+                <select
+                    name="cargo"
+                    id="edit-cargo"
+                    class="w-full p-2 rounded bg-white my-1"
+                >
+                    <option value="frontend">Frontend</option>
+                    <option value="backend">Backend</option>
+                    <option value="mobile">Mobile</option>
+                    <option value="fullstack">Fullstack</option>
+                    <option value="datascience">Data Science</option>
+                </select>
+            </div>
+            <div class="w-full">
+                <label class="font-bold text-lg mr-2">Status</label>
+                <input type="checkbox" name="status" id="edit-status">
+            </div>
+
+            <button 
+                type="submit"
+                class="bg-blue-500 w-full rounded p-2 font-medium text-white mt-2"
+                >
+                Salvar alterações
+            </button>
+            <button 
+                type="button"
+                class="border-2 border-zinc-900 w-full rounded p-2 font-medium text-zinc-900 mt-2"
+                onclick="handleCancelEdit()"
+                >
+                Cancelar
+            </button>
+
+        </form>
+
         <div class="w-full max-w-3xl mx-auto mt-6">
             <div id="lista-funcionarios" hx-get="/colaboradores" hx-trigger="load"></div>
         </div>
